# gpt_wrap

./: .env.development  .env.example  .gitignore  Dockerfile  LICENSE  Pipfile  README.md  Untitled.ipynb  ai_config.yaml.example  config.yaml.example  docker-compose.yaml  docker_compose.yaml  pyproject.toml  requirements.txt
articles/: first_part_articles.parquet  second_part_articles.parquet
src/: custom_exceptions.py  embeddings_utils.py  gpt_utils.py  main.py  scrip_utils.py  settings.py  stub_app.py  telegram_utils.py  vector_db_utils.py
src/db_utils/: db_initiate.py  scheme.py  utils.py
src/notebooks/: Untitled.ipynb  tax_articles.ipynb
src/system_prompts/: prompts.py
src/usage_statistics/: __init__.py  utils.py
src/vector_db_utils/: db_scheme.py  vector_db_utils.py
