[tool.poetry]
name = "gpt-wrap"
version = "0.1.0"
description = "Teregram bot wrapped around GPT API"
authors = ["mrYush"]
license = "MIT License"
readme = "README.md"
include = [{path = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.2"
pyyaml = "^6.0"
python-telegram-bot = "^20.2"
ipykernel = "^6.22.0"
mongoengine = "^0.27.0"
pandas = "^2.0.0"
transformers = "^4.28.1"
openpyxl = "^3.1.2"
tiktoken = "^0.3.3"
weaviate-client = "^3.19.2"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
