[tool.poetry]
name = "gpt-wrap"
version = "0.1.0"
description = "Teregram bot wrapped around GPT API"
authors = ["mrYush"]
license = "MIT License"
readme = "README.md"
include = [{path = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
python-telegram-bot = "^20.2"
ipykernel = "^6.22.0"
mongoengine = "^0.27.0"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
tiktoken = "^0.3.3"
openai = "^1.5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
